feat: banner section and added docs

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <header class="header">
+      <!-- Navigation Menu  -->
       <nav class="navigation container">
         <a class="logo">
           <img src="/assets/img/logo.png" alt="" />
@@ -19,6 +20,14 @@
         <a href="#">Blog</a>
         <a href="#"><button>contact</button></a>
       </nav>
+      <!-- Page banner  -->
+      <div class="banner">
+        <h1>Blog Articles</h1>
+        <p>
+          Agency provides a full service range including technical skills,
+          design, business understanding.
+        </p>
+      </div>
     </header>
   </body>
 </html>
