feat: newsletter section added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Agency Blog</title>
   </head>
   <body>
+    <!-- TODO: main section should be added  -->
     <!-- banner and navigation -->
     <header class="header">
       <!-- Navigation Menu  -->
@@ -104,6 +105,17 @@
         </article>
       </div>
       <button class="blog-load-more-btn">Load More</button>
+      <div class="section-divider"></div>
+    </section>
+    <!-- Newsletter -->
+    <section class="newsletter">
+      <div class="container">
+        <h3>Newsletter</h3>
+        <form class="newsletter-form" action="#">
+          <input type="text" placeholder="Your email" />
+          <button class="btn">Subscribe</button>
+        </form>
+      </div>
       <div class="section-divider"></div>
     </section>
   </body>
