--- a/index.html
+++ b/index.html
@@ -118,5 +118,21 @@
       </div>
       <div class="section-divider"></div>
     </section>
+    <!-- Contact -->
+    <section class="contact">
+      <div class="container">
+        <div>
+          <h1>Help To Build Your Dream Project</h1>
+          <p>
+            A digital agency is a business you hire to outsource your digital
+            marketing efforts, instead of handling in-house.
+          </p>
+          <button class="btn">contact now</button>
+        </div>
+        <div class="contact-img">
+          <img src="/assets/img/contact_decorator.png" alt="" />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
