feat: added footer section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/8434c54660.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Agency Blog</title>
   </head>
   <body>
@@ -134,5 +138,50 @@
         </div>
       </div>
     </section>
+    <footer>
+      <div class="container">
+        <aside>
+          <h4 class="footer-brand-name">Agency</h4>
+        </aside>
+        <aside class="footer-menu">
+          <h4>Menu</h4>
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#"> Services </a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </aside>
+        <aside class="footer-menu">
+          <h4>Service</h4>
+          <ul>
+            <li><a href="#">Design</a></li>
+            <li><a href="#"> Development </a></li>
+            <li><a href="#">Marketing</a></li>
+            <li><a href="#">See More </a></li>
+          </ul>
+        </aside>
+        <aside class="social-menu">
+          <ul>
+            <li>
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+            </li>
+          </ul>
+        </aside>
+      </div>
+      <div class="footer-credit">
+        <div>Copyright &copy; 2022 Laaqiq. All Rights Reserved.</div>
+        <div>
+          <a href="#">Terms of Use</a>
+          <a href="#">Privacy Policy</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
